--- a/src/style.scss
+++ b/src/style.scss
@@ -2,3 +2,19 @@ body {
   background-color: #eee;
   margin: 0;
 }
+
+input {
+  outline: none;
+}
+
+canvas {
+  background: #fff;
+  box-sizing: border-box;
+}
+
+.color {
+  width: 100px;
+  height: 100px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
