--- a/src/style.scss
+++ b/src/style.scss
@@ -1,22 +1,96 @@
+$length: 800px;
+
 body {
-  background-color: #eee;
+  background-color: #efefef;
+  align-items: center;
   margin: 0;
+}
+
+main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 input {
   outline: none;
+
+  &[readonly] {
+    border: none;
+    background: #ccc;
+  }
 }
 
 canvas {
-  display: block;
-  background: #fff;
   box-sizing: border-box;
-  margin: 100px auto;
+  margin: 0 auto;
+  width: $length;
+  height: $length;
+}
+
+.panel {
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.word-bench {
+  background-color: #efefef;
+}
+
+.editor {
+  box-sizing: border-box;
+  padding: 10px 15px;
+  height: $length;
+  display: flex;
+  flex-direction: column;
+
+  input[type=range] {
+    &::after {
+      display: inline;
+      content: attr(value);
+    }
+  }
+
+  input[name=r] {
+
+    &::-webkit-slider-runnable-track {
+      background: linear-gradient(90deg, black, red);
+      border-radius: 7.5px;
+    }
+  }
+
+  input[name=g] {
+
+    &::-webkit-slider-runnable-track {
+      background: linear-gradient(90deg, black, green);
+      border-radius: 7.5px;
+    }
+  }
+
+  input[name=b] {
+
+    &::-webkit-slider-runnable-track {
+      background: linear-gradient(90deg, black, blue);
+      border-radius: 7.5px;
+    }
+  }
 }
 
 .color {
-  width: 100px;
   height: 100px;
   border: 1px solid #ccc;
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: #ccc;
+
+  span {
+    mix-blend-mode: color-dodge;
+  }
 }
