feat: add snapshot

--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,8 @@ body {
   background-color: #e8ecf1;
   align-items: center;
   margin: 0;
+  height: 100vh;
+  overflow: hidden;
 }
 
 main {
@@ -27,18 +29,18 @@ input {
   }
 }
 
-canvas {
-  box-sizing: border-box;
-  margin: 0 auto;
-  width: $length;
-  height: $length;
-  z-index: 1;
-  background: #d8d9d7;
-}
-
 .panel {
   display: flex;
   margin: 0 auto;
+  canvas {
+    box-sizing: border-box;
+    margin: 0 auto;
+    width: $length;
+    height: $length;
+    z-index: 1;
+    background: #d8d9d7;
+    box-shadow: 0px 33px rgba(0, 0, 0, 0.2);
+  }
 }
 
 .word-bench {
@@ -59,31 +61,28 @@ canvas {
   display: flex;
   flex-direction: column;
 
-  input[type=range] {
+  input[type='range'] {
     &::after {
       display: inline;
       content: attr(value);
     }
   }
 
-  input[name=r] {
-
+  input[name='r'] {
     &::-webkit-slider-runnable-track {
       background: linear-gradient(90deg, black, red);
       border-radius: 7.5px;
     }
   }
 
-  input[name=g] {
-
+  input[name='g'] {
     &::-webkit-slider-runnable-track {
       background: linear-gradient(90deg, black, green);
       border-radius: 7.5px;
     }
   }
 
-  input[name=b] {
-
+  input[name='b'] {
     &::-webkit-slider-runnable-track {
       background: linear-gradient(90deg, black, blue);
       border-radius: 7.5px;
@@ -113,7 +112,7 @@ canvas {
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translate(-50%, 2*$account-height);
+  transform: translate(-50%, 2 * $account-height);
   height: $account-height;
   background: $sec-color;
   color: #3c4449;
@@ -144,17 +143,40 @@ canvas {
   }
 }
 
-@keyframes account-appear {
-  from {
-    tranform: translate(-50%, $account-height);
+.history {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 150px;
+  transform: translateY(110px);
+  transition: transform 0.2s linear;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+
+  &:hover {
+    transform: translateY(0);
   }
 
-  90% {
-    tranform: translate(-50%, $account-height);
+  .history-title {
+    height: 40px;
+    line-height: 40px;
+    font-size: 20px;
+    font-family: monospace;
+    color: #fff;
   }
-
-  to {
-    transform: translate(-50%, 0);
+  .history-items {
+    display: flex;
+    canvas {
+      margin: 0 15px;
+      border: 2px solid black;
+      cursor: pointer;
+      &:hover {
+        border: 2px solid #fff;
+      }
+    }
   }
-
 }
