--- a/src/style.scss
+++ b/src/style.scss
@@ -2,13 +2,21 @@ $length: 800px;
 $sec-color: #b1c2cc;
 $bench-width: 250px;
 $account-height: 50px;
+$navyblue: #170E2B;
+$darkblue: #005693;
+$blue: #009CAB;
+$white: #fff;
+$tan: #BBC69B;
 
 body {
-  background-color: #e8ecf1;
+  background-color: $darkblue;
   align-items: center;
   margin: 0;
   height: 100vh;
   overflow: hidden;
+  background: radial-gradient(circle at center, $navyblue 1.5px, transparent 1px, transparent 10px), $blue;
+  background-size: 8px 8px;
+  font-family: Oswald, sans-serif;
 }
 
 main {
@@ -20,12 +28,32 @@ main {
   align-items: center;
 }
 
+.main-title {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+  color: white;
+  font-size: 50px;
+  font-weight: 900;
+  text-transform: uppercase;
+  -webkit-text-stroke: 2px $navyblue;
+  letter-spacing: 10px;
+  margin: 0;
+  padding: 0;
+  user-select: none;
+}
+
+
 input {
   outline: none;
 
   &[readonly] {
     border: none;
-    background: #ccc;
+    background: rgba(255, 255, 255, 0.5);
+    font-family: Oswald;
+    cursor: default;
+    padding: 0 10px;
   }
 }
 
@@ -39,7 +67,7 @@ input {
     width: $length;
     height: $length;
     z-index: 1;
-    background: #d8d9d7;
+    background: $tan;
     box-shadow: 0px 33px rgba(0, 0, 0, 0.2);
   }
 }
@@ -49,11 +77,14 @@ input {
   left: calc(50% + 400px);
   height: $length;
   width: $bench-width;
-  background-color: $sec-color;
+  // background: $tan;
+  background: #353353;
   overflow: hidden;
   transform: translateX(-$bench-width);
   animation: bench-appear 1s linear forwards;
   opacity: 0;
+  padding-top: 30px;
+  box-sizing: border-box;
 }
 
 .editor {
@@ -61,6 +92,42 @@ input {
   padding: 10px 15px;
   display: flex;
   flex-direction: column;
+  height: 100%;
+
+  .coordinates {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+
+    &>div {
+      width: 45%;
+      display: flex;
+
+      label {
+        width: 15px;
+      }
+
+      input {
+        flex: 1;
+      }
+    }
+
+  }
+
+  .field {
+    margin: 5px 0;
+    display: flex;
+
+    label {
+      display: inline-block;
+      width: 50px;
+    }
+
+    input {
+      flex: 1;
+    }
+
+  }
 
   input[type='range'] {
     &::after {
@@ -69,9 +136,15 @@ input {
     }
   }
 
+  input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    cursor: pointer;
+  }
+
   input[name='r'] {
     &::-webkit-slider-runnable-track {
       background: linear-gradient(90deg, black, red);
+      align-self: center;
       border-radius: 7.5px;
     }
   }
@@ -89,43 +162,53 @@ input {
       border-radius: 7.5px;
     }
   }
+
 }
 
-.color {
-  height: 100px;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-  color: #ccc;
+.preview {
+  margin-top: 30px;
+  flex: 1;
 
-  span {
-    mix-blend-mode: difference;
+  .color {
+    height: 100px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    color: #ccc;
+    border-radius: 2px;
+    margin-top: 15px;
+
+    span {
+      mix-blend-mode: difference;
+      letter-spacing: 3px;
+      text-shadow: 0 0 5px #ccc;
+    }
   }
 }
 
-.account {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 2 * $account-height);
-  height: $account-height;
-  background: $sec-color;
-  color: #3c4449;
-  padding: 0 100px;
-  cursor: pointer;
-  white-space: nowrap;
-  font-family: monospace;
-  font-size: 20px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  animation: account-appear 2s linear forwards;
-}
+
+// .account {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   position: absolute;
+//   bottom: 0;
+//   left: 50%;
+//   transform: translate(-50%, 2 * $account-height);
+//   height: $account-height;
+//   background: $sec-color;
+//   color: #3c4449;
+//   padding: 0 100px;
+//   cursor: pointer;
+//   white-space: nowrap;
+//   font-size: 20px;
+//   border-top-left-radius: 5px;
+//   border-top-right-radius: 5px;
+//   animation: account-appear 2s linear forwards;
+// }
 
 @keyframes bench-appear {
   from {
@@ -157,23 +240,31 @@ input {
   justify-content: flex-start;
   align-items: center;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+  z-index: 1;
 
   &:hover {
     transform: translateY(0);
   }
 
   .history-title {
+    user-select: none;
     height: 40px;
     line-height: 40px;
     font-size: 20px;
-    font-family: monospace;
     color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
   }
 
   .history-items {
-    display: flex;
+    width: 100%;
+    scroll-snap-type: x mandatory;
+    white-space: nowrap;
+    overflow-y: auto;
+    scroll-behavior: smooth;
 
     canvas {
+      scroll-snap-align: center;
       margin: 0 15px;
       border: 2px solid black;
       cursor: pointer;
